<resources>
    <string name="app_name">InstaGeram</string>

    <string name="button_login">Log in</string>
    <string name="button_register">Register</string>
    <string name="button_relogin">Re-Login</string>
    <string name="button_disabled">Correct the input!</string>
    <string name="button_camera">Open Camera</string>
    <string name="button_gallery">Open Gallery</string>
    <string name="button_post_story">Post now!</string>
    <string name="button_retry">Try again</string>
    <string name="edit_text_name_hint">Enter your name!</string>
    <string name="edit_text_email_hint">Enter your email!</string>
    <string name="edit_text_password_hint">Enter your password!</string>
    <string name="edit_text_description_hint">Enter your story description!</string>
    <string name="error_text_password">Password can\'t be less than 6 characters!</string>
    <string name="error_text_empty">Input can\'t be empty!</string>
    <string name="error_invalid_email">Invalid email format!</string>
    <string name="text_go_to_register">Do not have account yet? <b><u>Register now!</u></b></string>
    <string name="text_go_to_login">Already have an account? <b><u>Login now!</u></b></string>
    <string name="text_posted_at">Posted at %s</string>
    <string name="text_while_ago">a while ago</string>
    <string name="text_empty_story">Can\'t load stories, make sure the internet is connected and swipe down to refresh.</string>
    <string name="text_include_location">Include your current location (enable/disable)</string>

    <string name="text_login_desc_1">Number #99 parody app for instagram with basic
        features. Swipe left…</string>
    <string name="text_login_desc_2">Get some random photos and pictures from random people
    who you don\'t know about.</string>
    <string name="text_login_desc_3">Share your photos and pictures to others though simple
    steps.</string>
    <string name="text_login_desc_4">That\'s all, don\'t expect more from this app. That\'s
    why, download the real Instragram now!</string>

    <string name="text_toast_register_first">Please register first!</string>
    <string name="text_toast_user_created">User created, please login!</string>
    <string name="text_toast_welcome">Welcome bruh!</string>
    <string name="text_toast_permission_not_granted">Permission is not granted!</string>
    <string name="text_toast_story_posted">New story posted!</string>
    <string name="text_toast_fail_to_take_photo">Failed to take photo!</string>
    <string name="text_toast_fail_to_open_camera">Failed to open camera!</string>
    <string name="text_toast_fail_to_get_location">Failed to get current location!</string>

    <string name="title_create_story">Post a Story</string>
    <string name="title_change_language">Change Language</string>
    <string name="title_close_app">Close the App</string>
    <string name="title_story_detail">%s\'s Story</string>

    <string name="title_activity_story_map">Story\'s Locations</string>
    <string name="map_normal_type">Normal mode</string>
    <string name="map_satellite_type">Satellite mode</string>
    <string name="map_terrain_type">Terrain mode</string>
    <string name="map_hybrid_type">Hybrid mode</string>

</resources>