<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".createstory.CreateStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/photo_placeholder"
            android:transitionName="photo_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:indeterminateTint="@color/yellow_primary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/photo_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.toharifqi.instageram.customview.InstaGeramButton
            android:id="@+id/camera_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            android:text="@string/button_camera"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gallery_button"
            app:layout_constraintTop_toBottomOf="@id/photo_image" />

        <com.toharifqi.instageram.customview.InstaGeramButton
            android:id="@+id/gallery_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="12sp"
            android:text="@string/button_gallery"
            app:layout_constraintLeft_toRightOf="@id/camera_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/camera_button" />

        <com.toharifqi.instageram.customview.InstaGeramEditText
            android:id="@+id/description_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_box_bg"
            android:gravity="top"
            android:hint="@string/edit_text_description_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_button" />

        <com.toharifqi.instageram.customview.InstaGeramButton
            android:id="@+id/post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:text="@string/button_post_story"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_edit_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>